--- a/data.ipynb
+++ b/data.ipynb
@@ -5,7 +5,7 @@
    "id": "d0ec47ad-5347-4a24-ba5c-f2c07057ed63",
    "metadata": {},
    "source": [
-    "# [Github Profile]( https://github.com/muneeb61)"
+    "# [Github Profile]( https://github.com/muneeb61/DataSet.git)"
    ]
   },
   {
